Added today's problem

--- a/Recipes/Store a recipe/task-info.yaml
+++ b/Recipes/Store a recipe/task-info.yaml
@@ -300,70 +300,6 @@ files:
         }
     }
   learner_created: false
-- name: src/recipes/controllers/RecipeController.java
-  visible: true
-  text: |
-    package recipes.controllers;
-
-    import org.springframework.http.HttpStatus;
-    import org.springframework.web.bind.annotation.*;
-    import org.springframework.web.server.ResponseStatusException;
-    import recipes.models.UniqueIdentifier;
-    import recipes.models.Recipe;
-
-    import java.util.Random;
-    import java.util.concurrent.ConcurrentHashMap;
-
-    @RestController
-    public class RecipeController {
-
-        ConcurrentHashMap<Integer, Recipe> map = new ConcurrentHashMap<>();
-        Random random = new Random();
-
-        @PostMapping("/api/recipe/new")
-        public UniqueIdentifier postRecipe(@RequestBody Recipe recipe) {
-            int randomNumber = Math.abs(random.nextInt());
-            while (map.containsKey(randomNumber)) {
-                randomNumber = Math.abs(random.nextInt());
-            }
-            map.put(randomNumber, recipe);
-            UniqueIdentifier uniqueIdentifier = new UniqueIdentifier(randomNumber);
-            return uniqueIdentifier;
-        }
-
-        @GetMapping("/api/recipe/{id}")
-        public Recipe getOneRecipe(@PathVariable int id) {
-            if (map.containsKey(id)) {
-                return map.get(id);
-            }
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND);
-        }
-    }
-  learner_created: true
-- name: src/recipes/models/Recipe.java
-  visible: true
-  text: |
-    package recipes.models;
-
-    import lombok.AllArgsConstructor;
-    import lombok.Data;
-    import lombok.NoArgsConstructor;
-
-    import java.util.List;
-
-    @Data
-    @NoArgsConstructor
-    @AllArgsConstructor
-    public class Recipe {
-        public String name;
-        public String description;
-        public List<String> ingredients;
-        public List<String> directions;
-    }
-  learner_created: true
-- name: src/recipes/models/UniqueIdentifier.java
-  visible: true
-  learner_created: true
 feedback_link: https://hyperskill.org/projects/180/stages/919/implement#comment
-status: Unchecked
+status: Failed
 record: -1
