--- a/Topics/Regexes in programs/lesson-info.yaml
+++ b/Topics/Regexes in programs/lesson-info.yaml
@@ -2,3 +2,7 @@ content:
 - Theory
 - Vehicle registration number
 - Check the clock time
+- Safe password
+- Check IP address
+- Illegal identifiers
+- Card name validation and identification
