--- a/Recipes/Store a recipe/task-info.yaml
+++ b/Recipes/Store a recipe/task-info.yaml
@@ -300,6 +300,12 @@ files:
         }
     }
   learner_created: false
+- name: src/recipes/model/Recipe.java
+  visible: true
+  learner_created: true
+- name: src/recipes/controller/RecipeController.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/180/stages/919/implement#comment
 status: Failed
 record: -1
