--- a/Topics/Standard functional interfaces/Ternary operator/task-info.yaml
+++ b/Topics/Standard functional interfaces/Ternary operator/task-info.yaml
@@ -18,5 +18,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2400#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: Fri, 05 Nov 2021 15:39:39 UTC
 record: -1
