--- a/Topics/Exception handling/Implement DELETE endpoint/task-info.yaml
+++ b/Topics/Exception handling/Implement DELETE endpoint/task-info.yaml
@@ -153,8 +153,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/15214#comment
-status: Solved
-feedback:
-  message: Congratulations!
-  time: Wed, 27 Oct 2021 16:56:41 UTC
+status: Failed
 record: -1
