--- a/Topics/Exception handling/Improve the program/task-info.yaml
+++ b/Topics/Exception handling/Improve the program/task-info.yaml
@@ -160,8 +160,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/15213#comment
-status: Solved
-feedback:
-  message: Congratulations!
-  time: Wed, 27 Oct 2021 16:49:41 UTC
+status: Failed
 record: -1
