--- a/Topics/Exception handling/Improve the program/build.gradle
+++ b/Topics/Exception handling/Improve the program/build.gradle
@@ -1,14 +1,24 @@
-plugins {
-    id 'java'
-    id 'org.springframework.boot' version '2.3.1.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+buildscript {
+    def javaVersion = Integer.parseInt(JavaVersion.current().getMajorVersion())
+    def bootVersion = (javaVersion == 17) ? "2.5.6" : "2.3.1.RELEASE"
+    def depsVersion = (javaVersion == 17) ? "1.0.11.RELEASE" : "1.0.9.RELEASE"
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$bootVersion"
+        classpath "io.spring.gradle:dependency-management-plugin:$depsVersion"
+    }
 }
 
-sourceCompatibility = 11
+apply plugin: 'java'
+apply plugin: "org.springframework.boot"
+apply plugin: "io.spring.dependency-management"
 
 repositories {
     mavenCentral()
-    maven { url "https://jitpack.io" }
 }
 
 sourceSets.main.resources.srcDirs = ["resources"]
